# HackSimulator

./: LICENSE  Makefile  README.md  pyproject.toml
n2t/core/assembler/: facade.py
n2t/core/parser/: CompilationEngine.py  JackTokenizer.py
n2t/core/vm_translator/: SymbolTable.py  VmCompilationEngine.py  VmWriter.py
n2t/infra/: __init__.py  executor.py  jack.py  vm.py
n2t/runner/: cli.py
